# EP_ISA

./: .gitignore  DATA_REQUIREMENTS.md  README.md  _deploy.ps1  pyproject.toml
notebooks/: Ep_ISA_Analysis.ipynb
src/Ep_ISA/: __init__.py  quickstart.py  utils.py
src/Ep_ISA/adapter/: finemo_io.py
src/Ep_ISA/exploring/: tf_family.py  tf_function.py  tf_pair_ppi.py
src/Ep_ISA/modeling/: cnn.py  predict.py  preprocess.py  train.py  trainer.py
src/Ep_ISA/plotting/: cooperativity.py  interaction.py  tf.py
src/Ep_ISA/scoring/: combi_isa.py  infer_tf_expr.py  null.py  single_isa.py  utils_isa.py
